--- a/app/src/main/res/layout/fragment_account_settings.xml
+++ b/app/src/main/res/layout/fragment_account_settings.xml
@@ -6,14 +6,17 @@
     tools:context=".Notifications"
     android:background="@color/pawty_yellow">
 
-    <!-- TODO: Update blank fragment layout -->
-
-
 
 
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/round_corners"
+        android:layout_margin="15dp">
     <LinearLayout
         android:id="@+id/likedPosts"
         android:layout_width="match_parent"
@@ -21,7 +24,7 @@
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:clickable="true"
-        android:padding="10dp"
+        android:padding="20dp"
         android:focusable="true">
         <ImageView
             android:layout_width="20dp"
@@ -38,16 +41,43 @@
             />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/blockedUsers"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/likedPosts"
+        android:gravity="center_vertical"
+        android:clickable="true"
+        android:padding="20dp"
+        android:focusable="true">
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/baseline_block"
+            android:layout_marginLeft="10dp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Blocked Users"
+            android:textSize="15sp"
+            />
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/logoutButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/likedPosts"
+        android:layout_below="@id/blockedUsers"
         android:text="Logout"
+        android:padding="20dp"
         android:textSize="15sp"
         android:textColor="#FF0000"
         android:gravity="start|left"
+        android:layout_marginLeft="10dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:layout_gravity="center_vertical" />
 
@@ -58,10 +88,13 @@
         android:text="Delete Account"
         android:textSize="15sp"
         android:textColor="#FF0000"
+        android:padding="20dp"
+        android:layout_marginLeft="10dp"
         android:gravity="start|left"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:layout_gravity="center_vertical" />
 
+    </LinearLayout>
   </RelativeLayout>
 
 </ScrollView>
