--- a/app/src/main/res/layout/fragment_profile_view.xml
+++ b/app/src/main/res/layout/fragment_profile_view.xml
@@ -210,13 +210,16 @@
                     android:paddingRight="10dp"
                     android:paddingTop="5dp"/>
             </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/profile_view_type"
-        android:text="Profile Type"
-        android:layout_gravity="right"/>
+
+             <TextView
+                 android:layout_margin="20dp"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:id="@+id/profile_view_type"
+                 android:text="Profile Type"
+                 android:layout_weight="1"/>
 </LinearLayout>
+
         <LinearLayout
             android:id="@+id/view_profile_tabs"
             android:layout_width="match_parent"
@@ -237,7 +240,7 @@
             <Spinner
                 android:id="@+id/pet_posts_spinner"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:textAlignment="center"
                 android:layout_weight="1"/>
