--- a/app/src/main/res/layout/fragment_pet_profile_view.xml
+++ b/app/src/main/res/layout/fragment_pet_profile_view.xml
@@ -7,10 +7,10 @@
     tools:context=".Notifications"
     android:background="@color/pawty_yellow">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/ViewProfileRoot"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:background="@color/pawty_yellow">
 
 
@@ -31,6 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:scaleType="centerCrop"
                     android:src="@mipmap/rufus_profile_foreground" />
 
                 <Button
@@ -62,9 +63,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     tools:ignore="MissingConstraints" />
             </LinearLayout>
-<ScrollView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -73,8 +72,10 @@
                 <Spinner
                     android:id="@+id/pet_profile_view_filter"
                     android:layout_marginTop="10dp"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="48dp"
+                    android:background="@drawable/round_corners"
+                    android:clipToOutline="true"
                     android:layout_gravity="right"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -353,6 +354,7 @@ chase, fetch, peanut butter\n"
                             android:layout_height="wrap_content"
                             android:text="Vaccinations: "/>
                         <TextView
+                            android:id="@+id/pet_view_vaccinations"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Rabies\nDPP\nBordetella"
@@ -379,9 +381,9 @@ chase, fetch, peanut butter\n"
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-</ScrollView>
+
         </LinearLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </FrameLayout>
