--- a/app/src/main/res/layout/fragment_pet_edit_add_pets.xml
+++ b/app/src/main/res/layout/fragment_pet_edit_add_pets.xml
@@ -268,7 +268,7 @@
                     android:focusable="true">
 
                     <ImageView
-                        android:id="@+id/petPhotoPreview"
+                        android:id="@+id/petEditPhotoPreview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
