--- a/app/src/main/res/layout/fragment_different_profiles_view.xml
+++ b/app/src/main/res/layout/fragment_different_profiles_view.xml
@@ -203,36 +203,37 @@
             android:id="@+id/dif_profile_unique_btns"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/view_profile_text_info"
+            android:layout_marginTop="6dp"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:layout_below="@id/view_profile_text_info">
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/different_profiles_follow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
                 android:backgroundTint="@color/pawty_pill_blue"
                 android:text="Follow"
-                android:textSize="18sp"
-                android:layout_marginEnd="30dp"/>
+                android:textSize="18sp" />
 
             <Button
                 android:id="@+id/different_profiles_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
                 android:backgroundTint="@color/pawty_pill_blue"
                 android:text="Message"
-                android:textSize="18sp"
-                android:layout_marginEnd="30dp"/>
+                android:textSize="18sp" />
 
             <ImageButton
+                android:id="@+id/profile_settings"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center_vertical"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/more_options_btn"
-                android:id="@+id/profile_settings"
-                android:src="@drawable/profile_settings"
-                android:background="?attr/selectableItemBackgroundBorderless"/>
+                android:src="@drawable/profile_settings" />
 
         </LinearLayout>
 
