--- a/app/src/main/res/layout/fragment_account_settings.xml
+++ b/app/src/main/res/layout/fragment_account_settings.xml
@@ -82,6 +82,7 @@
         android:layout_gravity="center_vertical" />
 
     <Button
+        android:id="@+id/deleteAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/logoutButton"
