--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,5 +8,14 @@
         <item name="colorControlActivated">@color/pawty_dark_blue</item>
         <item name="colorOnPrimary">@android:color/white</item>
     </style>
+    
+    <style name="CalendarDayOfWeek">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/date_text_color_selector</item>
+    </style>
 
 </resources>
